@@ -1,12 +1,13 @@
 if AUTOTESTS
 
 # build automated 'tests'
-TESTS=test-context test-font-face test-surface test-scaled-font
+TESTS=test-context test-font-face test-surface test-scaled-font test-font-options
 noinst_PROGRAMS = $(TESTS)
 test_context_SOURCES=test-context.cc
 test_font_face_SOURCES=test-font-face.cc
 test_surface_SOURCES=test-surface.cc
 test_scaled_font_SOURCES=test-scaled-font.cc
+test_font_options_SOURCES=test-font-options.cc
 
 else
 
